--- a/src/dashboard/templates/activities/activity_list.html
+++ b/src/dashboard/templates/activities/activity_list.html
@@ -6,10 +6,12 @@
         <table id="table" class="table">
             <thead>
             <tr>
-                <th width="27%">{% translate 'Name' %}</th>
-                <th width="27%">{% translate 'Description' %}</th>
-                <th  width="30%" >{% translate 'Couch Id' %}</th>
-                <th  width="30%" >{% translate 'Action' %}</th>
+                <th>{% translate 'Name' %}</th>
+                <th>{% translate 'Description' %}</th>
+                <th>{% translate 'Project' %}</th>
+                <th>{% translate 'Phase' %}</th>
+                <th>{% translate 'Couch Id' %}</th>
+                <th width="20%">{% translate 'Action' %}</th>
             </tr>
             </thead>
             <tbody>
@@ -17,6 +19,8 @@
                 <tr>
                     <td>{{ activity.name }}</td>
                     <td>{{ activity.description }}</td>
+                    <td>{{ activity.project }}</td>
+                    <td>{{ activity.phase }}</td>
                     <td>{{ activity.couch_id }}</td>
                     <td>
                         <a href="#"
