--- a/src/dashboard/templates/phases/phase_list.html
+++ b/src/dashboard/templates/phases/phase_list.html
@@ -6,10 +6,11 @@
         <table id="table" class="table">
             <thead>
             <tr>
-                <th width="27%">{% translate 'Name' %}</th>
-                <th width="27%">{% translate 'Description' %}</th>
-                <th  width="30%" >{% translate 'Couch Id' %}</th>
-                <th  width="30%" >{% translate 'Action' %}</th>
+                <th>{% translate 'Name' %}</th>
+                <th>{% translate 'Description' %}</th>
+                <th>{% translate 'Project' %}</th>
+                <th>{% translate 'Couch Id' %}</th>
+                <th>{% translate 'Action' %}</th>
             </tr>
             </thead>
             <tbody>
@@ -17,6 +18,7 @@
                 <tr>
                     <td>{{ phase.name }}</td>
                     <td>{{ phase.description }}</td>
+                    <td>{{ phase.project }}</td>
                     <td>{{ phase.couch_id }}</td>
                     <td>
                         <a href="#"
