--- a/src/dashboard/templates/activities/list.html
+++ b/src/dashboard/templates/activities/list.html
@@ -7,7 +7,7 @@
             
             {% if user.is_superuser or user|has_group:"Admin" %}
             <div class="float-right mb-3">
-                <a href="#"
+                <a href="{% url 'dashboard:activities:create' %}"
                 class="btn btn-primary btn-sm rounded-xl">
                     <i class="fa fa-plus mr-2"></i>
                     Create Activity
@@ -39,7 +39,7 @@
                         <thead>
                         <tr>
                             <th>{% translate 'Name' %}</th>
-                            <th>Description</th>
+                            <th>{% translate 'Description' %}</th>
                             <th>{% translate 'Project' %}</th>
                             <th>{% translate 'Phase' %}</th>
                             <th>{% translate 'Couch Id' %}</th>
@@ -53,14 +53,9 @@
                                 <td>{{ activity.project }}</td>
                                 <td>{{ activity.phase }}</td>
                                 <td>{{ activity.couch_id }}</td>
-                                <td>
+                                <td>                                    
                                     <a href="#"
-                                       class="btn btn-primary btn-xs" title="{% translate 'See profile' %}">
-                                        <span class="_web">Detail</span>
-                                        <span class="_mobile"><i class="fa fa-user"></i></span>
-                                    </a>
-                                    <a href="#"
-                                       class="btn btn-primary btn-xs" title="{% translate 'See profile' %}">
+                                       class="btn btn-primary btn-xs" title="{% translate 'Edit' %}">
                                         <span class="_web">Edit</span>
                                         <span class="_mobile"><i class="fa fa-edit"></i></span>
                                     </a>
