--- a/src/dashboard/templates/phases/list.html
+++ b/src/dashboard/templates/phases/list.html
@@ -7,7 +7,7 @@
             
             {% if user.is_superuser or user|has_group:"Admin" %}
             <div class="float-right mb-3">
-                <a href="#"
+                <a href="{% url 'dashboard:phases:create' %}"
                 class="btn btn-primary btn-sm rounded-xl">
                     <i class="fa fa-plus mr-2"></i>
                     Create Phase
@@ -41,6 +41,7 @@
                             <th>{% translate 'Name' %}</th>
                             <th>{% translate 'Description' %}</th>
                             <th>{% translate 'Project' %}</th>
+                            <th>{% translate 'Order' %}</th>
                             <th>{% translate 'Couch Id' %}</th>
                         </tr>
                         </thead>
@@ -50,15 +51,11 @@
                                 <td>{{ phase.name }}</td>
                                 <td>{{ phase.description }}</td>
                                 <td>{{ phase.project }}</td>
+                                <td>{{ phase.order }}</td>
                                 <td>{{ phase.couch_id }}</td>
-                                <td>
+                                <td>                                    
                                     <a href="#"
-                                       class="btn btn-primary btn-xs" title="{% translate 'See profile' %}">
-                                        <span class="_web">Detail</span>
-                                        <span class="_mobile"><i class="fa fa-user"></i></span>
-                                    </a>
-                                    <a href="#"
-                                       class="btn btn-primary btn-xs" title="{% translate 'See profile' %}">
+                                       class="btn btn-primary btn-xs" title="{% translate 'Edit' %}">
                                         <span class="_web">Edit</span>
                                         <span class="_mobile"><i class="fa fa-edit"></i></span>
                                     </a>
