--- a/src/dashboard/templates/projects/detail.html
+++ b/src/dashboard/templates/projects/detail.html
@@ -46,15 +46,15 @@ input {
                     <table id="table" class="table">
                         <thead>
                             <tr>
-                                <th width="20%">{% translate 'Project Name' %}</th>
-                                <th width="30%">{% translate 'Description' %}</th>
-                                <th width="30%">{% translate 'Couch Id' %}</th>
+                                <th>{% translate 'Project Name' %}</th>
+                                <th>{% translate 'Description' %}</th>
+                                <th>{% translate 'Couch Id' %}</th>
                             </tr>
                         </thead>
                         <tbody>
                             <td>{{ project.name }}</td>
-                    <td>{{ project.description }}</td>
-                    <td>{{ project.couch_id }}</td>
+                            <td>{{ project.description }}</td>
+                            <td>{{ project.couch_id }}</td>
                         </tbody>
                     </table>
                 </div>
