--- a/src/dashboard/templates/projects/list.html
+++ b/src/dashboard/templates/projects/list.html
@@ -38,10 +38,10 @@
                     <table id="table" class="table">
                         <thead>
                         <tr>
-                            <th width="30%">{% translate 'Project Name' %}</th>
-                            <th width="30%">{% translate 'Description' %}</th>
-                            <th width="27%">{% translate 'Couch Id' %}</th>
-                            <th  width="30%" >{% translate 'Action' %}</th>
+                            <th>{% translate 'Project Name' %}</th>
+                            <th>{% translate 'Description' %}</th>
+                            <th>{% translate 'Couch Id' %}</th>
+                            <th  width="20%" >{% translate 'Action' %}</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -50,14 +50,9 @@
                                 <td>{{ project.name }}</td>
                                 <td>{{ project.description }}</td>
                                 <td>{{ project.couch_id }}</td>
-                                <td>
-                                    <a href="{% url 'dashboard:projects:detail' project.no_sql_db_name %}"
-                                       class="btn btn-primary btn-xs" title="{% translate 'See profile' %}">
-                                        <span class="_web">Detail</span>
-                                        <span class="_mobile"><i class="fa fa-user"></i></span>
-                                    </a>
+                                <td>                                    
                                     <a href="{% url 'dashboard:projects:update' project.pk %}"
-                                       class="btn btn-primary btn-xs" title="{% translate 'See profile' %}">
+                                       class="btn btn-primary btn-xs" title="{% translate 'Edit' %}">
                                         <span class="_web">Edit</span>
                                         <span class="_mobile"><i class="fa fa-edit"></i></span>
                                     </a>
