--- a/src/dashboard/templates/projects/project_list.html
+++ b/src/dashboard/templates/projects/project_list.html
@@ -6,10 +6,10 @@
         <table id="table" class="table">
             <thead>
             <tr>
-                <th width="20%">{% translate 'Project Name' %}</th>
-                <th width="30%">{% translate 'Description' %}</th>
-                <th width="30%">{% translate 'Couch Id' %}</th>
-                <th width="30%" >{% translate 'Action' %}</th>
+                <th>{% translate 'Project Name' %}</th>
+                <th>{% translate 'Description' %}</th>
+                <th>{% translate 'Couch Id' %}</th>
+                <th width="20%" >{% translate 'Action' %}</th>
             </tr>
             </thead>
             <tbody>
@@ -19,11 +19,10 @@
                     <td>{{ project.description }}</td>
                     <td>{{ project.couch_id }}</td>
 
-                    <td>
-                        
+                    <td>                        
                         {% if user.is_superuser or user|has_group:"Admin" %}
                         <a href="{% url 'dashboard:projects:update' project.pk %}"
-                            class="btn btn-primary btn-xs" title="{% translate 'See profile' %}">
+                            class="btn btn-primary btn-xs" title="{% translate 'Edit' %}">
                             <span class="_web">Edit</span>
                             <span class="_mobile"><i class="fa fa-edit"></i></span>
                         </a>
