--- a/src/dashboard/templates/tasks/task_list.html
+++ b/src/dashboard/templates/tasks/task_list.html
@@ -25,14 +25,10 @@
                     <td>{{ task.activity }}</td>
                     <td>{{ task.couch_id }}</td>
                     <td>
-                        <a href="#"
-                            class="btn btn-primary btn-xs" title="{% translate 'See profile' %}">
-                            <span class="_web">Detail</span>
-                            <span class="_mobile"><i class="fa fa-user"></i></span>
-                        </a>
+                        
                         {% if user.is_superuser or user|has_group:"Admin" %}
                         <a href="#"
-                            class="btn btn-primary btn-xs" title="{% translate 'See profile' %}">
+                            class="btn btn-primary btn-xs" title="{% translate 'Edit' %}">
                             <span class="_web">Edit</span>
                             <span class="_mobile"><i class="fa fa-edit"></i></span>
                         </a>
