--- a/src/dashboard/templates/projects/project_list.html
+++ b/src/dashboard/templates/projects/project_list.html
@@ -26,6 +26,11 @@
                             <span class="_web">Edit</span>
                             <span class="_mobile"><i class="fa fa-edit"></i></span>
                         </a>
+                        <a href="{% url 'dashboard:projects:delete' project.pk %}"
+                            class="btn btn-primary btn-xs" title="{% translate 'Delete' %}">
+                            <span class="_web">Delete</span>
+                            <span class="_mobile"><i class="fa fa-edit"></i></span>
+                        </a>
                         {% endif %}
                     </td>
                 </tr>
@@ -59,7 +64,7 @@
             $('#search').on('keyup', function () {
                 table.search($(this).val()).draw();
             });
-                   
+               
                        
 
         });
