--- a/src/dashboard/templates/tasks/task_list.html
+++ b/src/dashboard/templates/tasks/task_list.html
@@ -32,6 +32,11 @@
                             <span class="_web">Edit</span>
                             <span class="_mobile"><i class="fa fa-edit"></i></span>
                         </a>
+                        <a href="{% url 'dashboard:tasks:delete' task.pk %}"
+                            class="btn btn-primary btn-xs" title="{% translate 'Delete' %}">
+                            <span class="_web">Delete</span>
+                            <span class="_mobile"><i class="fa fa-edit"></i></span>
+                        </a>
                         {% endif %}
                     </td>
                 </tr>
