--- a/src/dashboard/templates/phases/phase_list.html
+++ b/src/dashboard/templates/phases/phase_list.html
@@ -30,6 +30,11 @@
                             <span class="_web">Edit</span>
                             <span class="_mobile"><i class="fa fa-user"></i></span>
                         </a>
+                        <a href="{% url 'dashboard:phases:delete' phase.pk %}"
+                            class="btn btn-primary btn-xs" title="{% translate 'Delete' %}">
+                            <span class="_web">Delete</span>
+                            <span class="_mobile"><i class="fa fa-edit"></i></span>
+                        </a>
                         {% endif %}
                     </td>
                 </tr>
