--- a/src/dashboard/templates/activities/activity_list.html
+++ b/src/dashboard/templates/activities/activity_list.html
@@ -24,10 +24,10 @@
                     <td>{{ activity.couch_id }}</td>
                     <td>                        
                         {% if user.is_superuser or user|has_group:"Admin" %}
-                        <a href="#"
+                        <a href="{% url 'dashboard:activities:update' activity.pk %}"
                             class="btn btn-primary btn-xs" title="{% translate 'Edit' %}">
                             <span class="_web">Edit</span>
-                            <span class="_mobile"><i class="fa fa-edit"></i></span>
+                            <span class="_mobile"><i class="fa fa-user"></i></span>
                         </a>
                         <a href="{% url 'dashboard:activities:delete' activity.pk %}"
                             class="btn btn-primary btn-xs" title="{% translate 'Delete' %}">
