--- a/src/dashboard/templates/phases/phase_list.html
+++ b/src/dashboard/templates/phases/phase_list.html
@@ -25,7 +25,7 @@
                     <td>
                         
                         {% if user.is_superuser or user|has_group:"Admin" %}
-                        <a href="{% url 'dashboard:phases:update' phase.id %}"
+                        <a href="{% url 'dashboard:phases:update' phase.pk %}"
                             class="btn btn-primary btn-xs" title="{% translate 'Edit' %}">
                             <span class="_web">Edit</span>
                             <span class="_mobile"><i class="fa fa-user"></i></span>
