--- a/src/dashboard/templates/projects/project_list.html
+++ b/src/dashboard/templates/projects/project_list.html
@@ -27,7 +27,7 @@
                             <span class="_mobile"><i class="fa fa-edit"></i></span>
                         </a>
                         <a href="{% url 'dashboard:projects:delete' project.pk %}"
-                            class="btn btn-primary btn-xs" title="{% translate 'Delete' %}">
+                            class="btn btn-sm btn-danger" title="{% translate 'Delete' %}">
                             <span class="_web">Delete</span>
                             <span class="_mobile"><i class="fa fa-edit"></i></span>
                         </a>
