--- a/src/dashboard/templates/activities/activity_list.html
+++ b/src/dashboard/templates/activities/activity_list.html
@@ -5,32 +5,31 @@
     <div class="card-body table-responsive">
         <table id="table" class="table">
             <thead>
-            <tr>
+            <tr>                
+                <th>{% translate 'Order' %}</th>
                 <th>{% translate 'Name' %}</th>
-                <th>{% translate 'Description' %}</th>
-                <th>{% translate 'Project' %}</th>
-                <th>{% translate 'Phase' %}</th>
-                <th>{% translate 'Couch Id' %}</th>
-                <th width="20%">{% translate 'Action' %}</th>
+                <th width="40%">{% translate 'Action' %}</th>
             </tr>
             </thead>
             <tbody>
             {% for activity in activities %}
                 <tr>
+                    <td>{{ activity.order }}</td>                    
                     <td>{{ activity.name }}</td>
-                    <td>{{ activity.description }}</td>
-                    <td>{{ activity.project }}</td>
-                    <td>{{ activity.phase }}</td>
-                    <td>{{ activity.couch_id }}</td>
                     <td>                        
                         {% if user.is_superuser or user|has_group:"Admin" %}
+                        <a href="{% url 'dashboard:activities:activity_Detail' activity.pk %}"   
+                            class="btn btn-primary btn-xs" title="{% translate 'View' %}">
+                            <span class="_web">View</span>
+                            <span class="_mobile"><i class="fa fa-eye"></i></span>
+                        </a>
                         <a href="{% url 'dashboard:activities:update' activity.pk %}"
                             class="btn btn-primary btn-xs" title="{% translate 'Edit' %}">
                             <span class="_web">Edit</span>
                             <span class="_mobile"><i class="fa fa-user"></i></span>
                         </a>
                         <a href="{% url 'dashboard:activities:delete' activity.pk %}"
-                            class="btn btn-primary btn-xs" title="{% translate 'Delete' %}">
+                            class="btn btn-sm btn-danger" title="{% translate 'Delete' %}">
                             <span class="_web">Delete</span>
                             <span class="_mobile"><i class="fa fa-edit"></i></span>
                         </a>
