--- a/src/dashboard/templates/layouts/sidebar.html
+++ b/src/dashboard/templates/layouts/sidebar.html
@@ -62,29 +62,7 @@
                     <a href="{% url 'dashboard:phases:list' %}"
                        class="nav-link {% if active_level1 == 'phases' %}active{% endif %}">
                         <i class="nav-icon fa fa-comment-alt"></i>
-                        <p>Phases</p>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <nav class="mt-2">
-            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
-                <li class="nav-item">
-                    <a href="{% url 'dashboard:activities:list' %}"
-                       class="nav-link {% if active_level1 == 'activities' %}active{% endif %}">
-                        <i class="nav-icon fa fa-comment-alt"></i>
-                        <p>Activities</p>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <nav class="mt-2">
-            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
-                <li class="nav-item">
-                    <a href="{% url 'dashboard:tasks:list' %}"
-                       class="nav-link {% if active_level1 == 'tasks' %}active{% endif %}">
-                        <i class="nav-icon fa fa-comment-alt"></i>
-                        <p>Tasks</p>
+                        <p>List Phases</p>
                     </a>
                 </li>
             </ul>
