--- a/src/dashboard/templates/phases/list.html
+++ b/src/dashboard/templates/phases/list.html
@@ -10,7 +10,7 @@
                 <a href="{% url 'dashboard:phases:create' %}"
                 class="btn btn-primary btn-sm rounded-xl">
                     <i class="fa fa-plus mr-2"></i>
-                    Create Phase
+                    {% translate 'Add a Phase' %}
                 </a>
             </div>
             {% endif %}
@@ -38,27 +38,44 @@
                     <table id="table" class="table">
                         <thead>
                         <tr>
-                            <th>{% translate 'Name' %}</th>
-                            <th>{% translate 'Description' %}</th>
-                            <th>{% translate 'Project' %}</th>
                             <th>{% translate 'Order' %}</th>
-                            <th>{% translate 'Couch Id' %}</th>
+                            <th>{% translate 'Name' %}</th>                
+                            <th width="50%">{% translate 'Action' %}</th>
                         </tr>
                         </thead>
                         <tbody>
                         {% for phase in phases %}
                             <tr>
-                                <td>{{ phase.name }}</td>
-                                <td>{{ phase.description }}</td>
-                                <td>{{ phase.project }}</td>
                                 <td>{{ phase.order }}</td>
-                                <td>{{ phase.couch_id }}</td>
+                                <td>{{ phase.name }}</td>  
                                 <td>                                    
-                                    <a href="#"
-                                       class="btn btn-primary btn-xs" title="{% translate 'Edit' %}">
-                                        <span class="_web">Edit</span>
-                                        <span class="_mobile"><i class="fa fa-edit"></i></span>
-                                    </a>
+                                    {% if user.is_superuser or user|has_group:"Admin" %}
+                                    <a href="{% url 'dashboard:phases:phase_Detail' phase.pk %}"
+                                    class="btn btn-primary btn-xs" title="{% translate 'View' %}">
+                                    <span class="_web">View</span>
+                                    <span class="_mobile"><i class="fa fa-eye"></i></span>
+                                </a>
+                                <a href="{% url 'dashboard:phases:update' phase.pk %}"
+                                    class="btn btn-primary btn-xs" title="{% translate 'Edit' %}">
+                                    <span class="_web">Edit</span>
+                                    <span class="_mobile"><i class="fa fa-edit"></i></span>
+                                </a>
+                                <a href="{% url 'dashboard:phases:MoveUp' phase.pk %}"
+                                    class="btn btn-primary btn-xs" title="{% translate 'Move Up' %}">
+                                    <span class="_web">Move Up</span>
+                                    <span class="_mobile"><i class="fa fa-arrow-up"></i></span>
+                                </a>                        
+                                <a href="{% url 'dashboard:phases:MoveDown' phase.pk %}"
+                                    class="btn btn-primary btn-xs" title="{% translate 'Move Down' %}">
+                                    <span class="_web">Move Down</span>
+                                    <span class="_mobile"><i class="fa fa-arrow-down"></i></span>
+                                </a>
+                                <a href="{% url 'dashboard:phases:delete' phase.pk %}"
+                                    class="btn btn-primary btn-xs" title="{% translate 'Delete' %}">
+                                    <span class="_web">Delete</span>
+                                    <span class="_mobile"><i class="fa fa-trash"></i></span>
+                                </a>
+                        {% endif %}
                                 </td>
                             </tr>
                         {% endfor %}
