--- a/src/dashboard/templates/phases/phase_list.html
+++ b/src/dashboard/templates/phases/phase_list.html
@@ -6,34 +6,43 @@
         <table id="table" class="table">
             <thead>
             <tr>
-                <th>{% translate 'Name' %}</th>
-                <th>{% translate 'Description' %}</th>
-                <th>{% translate 'Project' %}</th>
                 <th>{% translate 'Order' %}</th>
-                <th>{% translate 'Couch Id' %}</th>
-                <th width="20%">{% translate 'Action' %}</th>
+                <th>{% translate 'Name' %}</th>                
+                <th width="50%">{% translate 'Action' %}</th>
             </tr>
             </thead>
             <tbody>
             {% for phase in phases %}
                 <tr>
-                    <td>{{ phase.name }}</td>
-                    <td>{{ phase.description }}</td>
-                    <td>{{ phase.project }}</td>
                     <td>{{ phase.order }}</td>
-                    <td>{{ phase.couch_id }}</td>
+                    <td>{{ phase.name }}</td>                    
                     <td>
                         
                         {% if user.is_superuser or user|has_group:"Admin" %}
+                        <a href="{% url 'dashboard:phases:phase_Detail' phase.pk %}"
+                            class="btn btn-primary btn-xs" title="{% translate 'View' %}">
+                            <span class="_web">View</span>
+                            <span class="_mobile"><i class="fa fa-eye"></i></span>
+                        </a>
                         <a href="{% url 'dashboard:phases:update' phase.pk %}"
                             class="btn btn-primary btn-xs" title="{% translate 'Edit' %}">
                             <span class="_web">Edit</span>
-                            <span class="_mobile"><i class="fa fa-user"></i></span>
+                            <span class="_mobile"><i class="fa fa-edit"></i></span>
+                        </a>
+                        <a href="{% url 'dashboard:phases:MoveUp' phase.pk %}"
+                            class="btn btn-primary btn-xs" title="{% translate 'Move Up' %}">
+                            <span class="_web">Move Up</span>
+                            <span class="_mobile"><i class="fa fa-arrow-up"></i></span>
+                        </a>                        
+                        <a href="{% url 'dashboard:phases:MoveDown' phase.pk %}"
+                            class="btn btn-primary btn-xs" title="{% translate 'Move Down' %}">
+                            <span class="_web">Move Down</span>
+                            <span class="_mobile"><i class="fa fa-arrow-down"></i></span>
                         </a>
                         <a href="{% url 'dashboard:phases:delete' phase.pk %}"
-                            class="btn btn-primary btn-xs" title="{% translate 'Delete' %}">
+                            class="btn btn-sm btn-danger" title="{% translate 'Delete' %}">
                             <span class="_web">Delete</span>
-                            <span class="_mobile"><i class="fa fa-edit"></i></span>
+                            <span class="_mobile"><i class="fa fa-trash"></i></span>
                         </a>
                         {% endif %}
                     </td>
@@ -56,14 +65,14 @@
                 dom: "ltipr",
                 columnDefs: [
                     {
-                        targets: 1,
+                        targets: 4,
                         orderable: false,
                         searchable: false,
                     }
                 ],
                 lengthMenu: [100, 200, 300],
                 pageLength: 100,
-                order: [[0, 'desc']]
+                order: [[0, 'asc']]
             });
             $('#search').on('keyup', function () {
                 table.search($(this).val()).draw();
@@ -71,7 +80,16 @@
                        
 
         });
-        
+        saveOrderingButton.addEventListener('click', saveOrdering);
+    function saveOrdering() {
+         const rows = document.getElementById("groups").querySelectorAll('tr');
+         let ids = [];
+         for (let row of rows) {
+             ids.push(row.dataset.lookup);
+        }
+        formInput.value = ids.join(',');
+        orderingForm.submit();
+    }
 
     </script>
 
