finialized the CRUD for Phase,activity and task

--- a/src/dashboard/templates/activities/activity_detail.html
+++ b/src/dashboard/templates/activities/activity_detail.html
@@ -30,6 +30,11 @@
                     Create Task
                 </a>
             </div>
+            <a href="{% url 'dashboard:activities:activity_Detail' activity.pk %}"   
+                                    class="btn btn-primary btn-xs" title="{% translate 'Referesh' %}">
+                                    <span class="_web">Referesh</span>
+                                    <span class="_mobile"><i class="fa fa-eye"></i></span>
+                                </a>
             {% endif %}                
             </div>
             
@@ -82,7 +87,7 @@
                                     <span class="_web">Move Down</span>
                                     <span class="_mobile"><i class="fa fa-arrow-down"></i></span>
                                 </a>
-                                <a href="{% url 'dashboard:tasks:MoveDown' task.pk %}"
+                                <a href="#"
                                     class="btn btn-primary btn-xs" title="{% translate 'Move Down' %}">
                                     <span class="_web">Task Form</span>
                                     <span class="_mobile"><i class="fa fa-arrow-down"></i></span>
