--- a/src/dashboard/templates/phases/phase_detail.html
+++ b/src/dashboard/templates/phases/phase_detail.html
@@ -28,8 +28,16 @@
                     Create Activity
                 </a>
             </div>
+            <a href="{% url 'dashboard:phases:phase_Detail' phase.pk %}"
+                            class="btn btn-primary btn-xs" title="{% translate 'Referesh' %}">
+                            <span class="_web">Referesh</span>
+                            <span class="_mobile"><i class="fa fa-eye"></i></span>
+                        </a>
             {% endif %}
             </div>
+            
+        </div>
+        <div class="card">
             <div class="card-body table-responsive">
                 <div class="col-8 text-left">
                     <div class="fs28 lh35 text-primary text-bold-family mb-4" style="font-size: 16px !important;">
@@ -61,7 +69,7 @@
                                 <a href="{% url 'dashboard:activities:update' activity.pk %}"
                                     class="btn btn-primary btn-xs" title="{% translate 'Edit' %}">
                                     <span class="_web">Edit</span>
-                                    <span class="_mobile"><i class="fa fa-user"></i></span>
+                                    <span class="_mobile"><i class="fa fa-edit"></i></span>
                                 </a>
                                 <a href="{% url 'dashboard:activities:MoveUp' activity.pk %}"
                                     class="btn btn-primary btn-xs" title="{% translate 'Move Up' %}">
@@ -76,7 +84,7 @@
                                 <a href="{% url 'dashboard:activities:delete' activity.pk %}"
                                     class="btn btn-sm btn-danger" title="{% translate 'Delete' %}">
                                     <span class="_web">Delete</span>
-                                    <span class="_mobile"><i class="fa fa-edit"></i></span>
+                                    <span class="_mobile"><i class="fa fa-trash"></i></span>
                                 </a>
                                 {% endif %}
                             </td>
