--- a/src/dashboard/templates/tasks/task_Detail.html
+++ b/src/dashboard/templates/tasks/task_Detail.html
@@ -18,6 +18,7 @@
                          <p style="font-size: 16px !important;"><strong>Description:</strong> {{ task.description }}</p>
                          <p style="font-size: 16px !important;"><strong>Project:</strong> {{ task.activity.phase.project.name }}</p>
                          <p style="font-size: 16px !important;"><strong>Phase:</strong> {{ task.activity.phase.name }}</p>
+                         <p style="font-size: 16px !important;"><strong>Activity:</strong> {{ task.activity.name }}</p>
                          <p style="font-size: 16px !important;"><strong>Form:</strong> {{ task.form }}</p>
                          <p style="font-size: 16px !important;"><strong>Couch Id:</strong> {{ task.couch_id }}</p>
                     </div>
