--- a/src/dashboard/templates/tasks/task_detail.html
+++ b/src/dashboard/templates/tasks/task_detail.html
@@ -22,7 +22,22 @@
                          <p style="font-size: 16px !important;"><strong>Form:</strong> {{ task.form }}</p>
                          <p style="font-size: 16px !important;"><strong>Couch Id:</strong> {{ task.couch_id }}</p>
                     </div>
-                </div>               
+                </div>       
+                {% if user.is_superuser or user|has_group:"Admin" %}
+                <div class="float-right mb-3">
+                    <a href="{% url 'dashboard:form_builder:create-form-type' task.pk %}" 
+                       class="btn btn-primary btn-sm rounded-xl">
+                       <i class="fa fa-plus mr-2"></i>
+                       Create Form
+                    </a>
+                </div>
+                <a href="{% url 'dashboard:tasks:task_detail' task.pk %}"
+                    class="btn btn-primary btn-xs"
+                    title="{% translate 'Refresh' %}">
+                    <span class="_web">{% translate 'Refresh' %}</span>
+                    <span class="_mobile"><i class="fa fa-eye"></i></span>
+                </a>
+                {% endif %}
             </div>
             
         </div>
